fix notice z-index

--- a/public/app.css
+++ b/public/app.css
@@ -3118,7 +3118,7 @@ footer {
 }
 
 .custom-field input {
-  width: 140%;
+  width: 100%;
 }
 
 /* Media Queries: Height */
